--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -93,7 +93,7 @@ h1, h2, h3, h4, h5, h6 {
 		document.getElementById("daily_status_report").addEventListener(
 				"click", showDsrCreater);
 		function showDsrCreater() {
-			location.href = "dsrcreater.jsp";
+			location.href = "./dsrcreater.jsp";
 		}
 	</script>
 </body>
