--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,8 @@ h1, h2, h3, h4, h5, h6 {
 	<div class="w3-top">
 		<div class="w3-bar w3-white w3-padding w3-card"
 			style="letter-spacing: 4px;">
-			<a href="#home" class="w3-bar-item w3-button">Sunil Home</a>
+			<a href="#home" class="w3-bar-item w3-button"> <img alt="Logo"
+				src="assert/img_logo.png" width="40" height="40"></a>
 			<!-- Right-sided navbar links. Hide them on small screens -->
 			<div class="w3-right w3-hide-small">
 				<a href="#menu" class="w3-bar-item w3-button">Menu</a> <a
